--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@sse-auth/repotem",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "dist/index.js",
-  "types": "dist/",
+  "types": "index.d.ts",
   "scripts": {
     "build": "tsc"
   },
@@ -24,5 +24,9 @@
     "react-dom": "^18.3.1",
     "tslib": "^2.6.3",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
+    "crypto-js": "^4.2.0"
   }
 }
