--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
       "module": "CommonJS",
       "lib": ["ES6", "DOM"],
       "declaration": true,
-      "declarationMap": true, // Generate source maps for .d.ts files
+      // "declarationMap": true, // Generate source maps for .d.ts files
       "sourceMap": true, // Generate source maps for debugging
       "outDir": "./dist", // Output directory for compiled files
       "strict": true, // Enable all strict type-checking options
